--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-icons": "^4.11.0",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
