--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^4.11.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "latest",
