--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "remask": "^1.2.2",
     "styled-components": "^6.0.8",
     "yup": "^1.3.2"
   },
@@ -27,6 +28,7 @@
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/react-input-mask": "^3.0.4",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "typescript": "latest"
