--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "axios": "^1.6.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
