--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-number-format": "^5.3.1",
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "remask": "^1.2.2",
