--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.11.0",
     "react-number-format": "^5.3.1",
     "react-select": "^5.8.0",
+    "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "remask": "^1.2.2",
     "styled-components": "^6.0.8",
