--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "^7.51.4",
     "react-icons": "^4.11.0",
     "react-number-format": "^5.3.1",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.23.0",
     "react-select": "^5.8.0",
     "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
@@ -34,6 +36,8 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/react-input-mask": "^3.0.4",
+    "@types/react-query": "^1.2.9",
+    "@types/react-router-dom": "^5.3.3",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "typescript": "latest"
