--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/css-modules": "^1.0.5",
     "@types/node": "latest",
-    "@types/react": "latest",
+    "@types/react": "^18.3.1",
     "@types/react-dom": "latest",
     "@types/react-input-mask": "^3.0.4",
     "@types/react-query": "^1.2.9",
