--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   "devDependencies": {
     "@types/css-modules": "^1.0.5",
     "@types/node": "latest",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "latest",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
     "@types/react-input-mask": "^3.0.4",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
